[package]
name = "skyless-editor-tauri"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["shell-open"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[features]
custom-protocol = ["tauri/custom-protocol"]
