[package]
name = "skyless-editor-tauri"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
model = { package = "skyless-editor-model", path = "../model" }
transport = { package = "skyless-editor-transport", path = "../transport" }

async-trait = "0.1.77"
base64 = "0.21.7"
bytes = "1.5.0"
futures = "0.3.30"
hashbrown = { version = "0.14.3", features = ["rayon"] }
image = "0.24.8"
itertools = "0.12.1"
js-sys = "0.3.68"
num_enum = "0.7.2"
percent-encoding = "2.3.1"
rayon = "1.8.1"
rkyv = "0.7.44"
serde = { version = "1.0.196", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta.2"
tokio = { version = "1.36.0", features = ["macros"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
